@@ -1,3 +1,6 @@
+ -- Improve call forwarding using new "Local" channel driver.
+ -- Add "Local" channel
+ -- Substantial SIP enhancements including retransmissions
  -- Enforce case sensitivity on extension/context names
  -- Add monitor support (Thanks, Mahmut)
  -- Add experimental "trunk" option to IAX2 for high density VoIP
